--- a/Template Orchastrators/IOS-XE Switch Orchastrator.jinja
+++ b/Template Orchastrators/IOS-XE Switch Orchastrator.jinja
@@ -6,8 +6,8 @@
 #}
 
 {# include statements for various libraries #}
-{% incldue "Libraries/Variable Library" %} {# Library to store variables that require extra/ugly processing to set #}
-{% incldue "Libraries/Macro Library" %} {# Library to store various macros #}
+{% include "Libraries/Variable Library" %} {# Library to store variables that require extra/ugly processing to set #}
+{% include "Libraries/Macro Library" %} {# Library to store various macros #}
 {% include "Libraries/ACL Library" %} {# Library to store ACL definitions #}
 
 {# include statements for STIG Conpliance Templates #}
