--- a/SITE01 Infrastructure as Code/AREA-VARIABLES.jinja
+++ b/SITE01 Infrastructure as Code/AREA-VARIABLES.jinja
@@ -9,7 +9,9 @@
         'secondary_ntp_servers': [
             '203.0.113.10',
             '203.0.113.15'
-        ]
+        ],
+        'ntp_key_hash': '0707307580139750378057139047801234',
+        'ntp_key_id': '65565'
     },
     'logging': {
         'logging_servers': [
